se agrego un calendario personalizado q verifica la disponibilidad del doctor ese dia y se cambio el atributo de la disponibilidad en un String personalidazo

--- a/src/main/resources/templates/profesional_form.html
+++ b/src/main/resources/templates/profesional_form.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    
 </head>
 
 <body>
@@ -137,8 +138,30 @@
 
                 <hr class="my-4">
 
+                
+            <input type="radio" th:value="1m" name="lunes" id="">
+            <input type="radio" th:value="1t" name="lunes" id="">
+            <input type="radio" th:value="1n" name="lunes" id="">
+            <input type="radio" th:value="2m" name="martes" id="">
+            <input type="radio" th:value="2t" name="martes" id="">
+            <input type="radio" th:value="2n" name="martes" id="">
+            <input type="radio" th:value="3m" name="miercoles" id="">
+            <input type="radio" th:value="3t" name="miercoles" id="">
+            <input type="radio" th:value="3n" name="miercoles" id="">
+            <input type="radio" th:value="4m" name="jueves" id="">
+            <input type="radio" th:value="4t" name="jueves" id="">
+            <input type="radio" th:value="4n" name="jueves" id="">
+            <input type="radio" th:value="5m" name="viernes" id="">
+            <input type="radio" th:value="5t" name="viernes" id="">
+            <input type="radio" th:value="5n" name="viernes" id="">
+            <input type="radio" th:value="6m" name="sabado" id="">
+            <input type="radio" th:value="6t" name="sabado" id="">
+            <input type="radio" th:value="6n" name="sabado" id="">
+            <input type="radio" th:value="0m" name="domingo" id="">
+            <input type="radio" th:value="0t" name="domingo" id="">
+            <input type="radio" th:value="0n" name="domingo" id="">
                
-
+                
 
                 <hr class="my-4">
 
