ahora se puede crear un turno teniendo en cuenta el horario del doctor y dando un valor distinto dependiendo el horario

--- a/src/main/resources/templates/modificar_turno.html
+++ b/src/main/resources/templates/modificar_turno.html
@@ -42,6 +42,7 @@
                     <!-- <option th:each="dia:${calendario}" th:value="${dia}" th:text="${dia}" /> -->
                 </select>
             </div>
+            <!-- falta un boton para mostrar el historial del paciente -->
 
             <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Sintomas</label>
